# BasicFEMCpp

./: .gitignore  CMakeLists.txt  Main.cpp  ProgramMap.txt  README.md  README.md~  Solid2D.geo  Solid2D.msh  domain_decomposition.txt  makefile  test.h
.github/workflows/: runUnitTests.yml
CMakeModules/: EnableEigen.cmake  EnableMPI.cmake  EnablePETSc.cmake  FindHDF5.cmake  add_unit_test.cmake
Examples/: CMakeLists.txt  Main.cpp  test.h
Geometry/: CMakeLists.txt  GeometricElement.cpp  GeometricElement.h  GeometricElementT.cpp  GeometricElementT.h  GeometricLine.cpp  GeometricLine.h  GeometricMap.h  GeometricMesh.cpp  GeometricMesh.h  GeometricNode.cpp  GeometricNode.h  GeometricQuad.cpp  GeometricQuad.h
GmshInterface/: CMakeLists.txt  GeometricBoundaryCondition.cpp  Line.cpp  Line.h  LineLoop.cpp  LineLoop.h  Mesh.cpp  PlaneSurface.h  Point.h  Spline.cpp  Surface.cpp  Surface.h
Integration/: CMakeLists.txt  IntegrationRule.cpp  IntegrationRule.h  IntegrationRuleLine.cpp  IntegrationRuleLine.h  IntegrationRuleLinear.cpp  IntegrationRuleLinear.h
LibBase/: CMakeLists.txt
Libs/tensorlib/: operators.h
Material/: CMakeLists.txt  MaterialBase.h
Matrix/: CMakeLists.txt  DenseEigen.h  PETScDataTypes.h  SparseEigen.h
NotClassified/: BoundaryCondition.h  CMakeLists.txt  Element.cpp  Element.h  FEMSolver.cpp  FEMSolver.h  Node.cpp  Node.h
ShapeFunction/: CMakeLists.txt  ShapeLinear.cpp  ShapeLinear.h  ShapeTypes.h
Topology/: CMakeLists.txt  TopologyLine.cpp  TopologyLine.h  TopologyLinear.cpp  TopologyLinear.h  TopologyQuad.cpp  TopologyQuad.h  TopologyTypes.h
UnitTest/: CMakeLists.txt  TestGeom.cpp  TestMPI.cpp  TestShapeFunction.cpp  test_main.cpp  test_mainMPI.cpp
UnitTest/MPI/: CMakeLists.txt  TestMPI.cpp
Utility/: CMakeLists.txt  PanicButton.h
cmake-modules/: FindMETIS.cmake  FindPETSc.cmake  ResolveCompilerPaths.cmake
src/: BoundaryCondition.cpp  CMakeLists.txt  Element.cpp  FEMSolver.cpp  FEMSolver.h  Material.cpp  Material.h  Node.h
src/libs/tensorlib/: operators.h
src/mesh_interface/: CMakeLists.txt  Circle.cpp  Circle.h  GeometricBoundaryCondition.h  Geometry.cpp  Geometry.h  Line.h  Mesh.cpp  Mesh.cpp~  Mesh.h  PlaneSurface.cpp  PlaneSurface.h  Point.cpp  Point.h  Spline.h
